--- a/License/1.05.md
+++ b/License/1.05.md
@@ -13,7 +13,7 @@
 
 Настоящее соглашение относится к программному обеспечению ERA, которое Вы устанавливаете на Ваше устройство самостоятельно, любым шрифтам, значкам, изображениям или звуковым файлам, базами данных предоставляемым в составе программного обеспечения ERA, а также ко всем обновлениям, дополнениям или службам программного обеспечения ERA, если в их отношении не применяются иные условия.
 
-Настоящее программное обеспечение ERA предоставляется по неисключительной лицензии и доступно для скачивания на сайте [aronicle.com](aronicle.com). В рамках настоящего соглашения Правообладатель предоставляет вам право установить и запустить любое количество экземпляров программного обеспечения ERA на устройстве (лицензированное устройство) для одновременного использования одним лицом, если Вы соблюдаете все условия настоящего Соглашения.
+Настоящее программное обеспечение ERA предоставляется по неисключительной лицензии и доступно для скачивания на сайте [aronicle.com](http://aronicle.com). В рамках настоящего соглашения Правообладатель предоставляет вам право установить и запустить любое количество экземпляров программного обеспечения ERA на устройстве (лицензированное устройство) для одновременного использования одним лицом, если Вы соблюдаете все условия настоящего Соглашения.
 
 ## 1. Термины и определения
 Перед использованием программного обеспечения ERA настоящим Пользователь понимает и соглашается со всеми терминами и условиями настоящего Соглашения, а именно:  
