--- a/License/1.05.md
+++ b/License/1.05.md
@@ -18,76 +18,42 @@
 ## 1. Термины и определения
 Перед использованием программного обеспечения ERA настоящим Пользователь понимает и соглашается со всеми терминами и условиями настоящего Соглашения, а именно:  
 **Закрытый (секретный) и проверочный (открытый) ключи Пользователя** — это ключи, созданные Пользователем с помощью программного обеспечения ERA в порядке, установленном настоящим Соглашением. Каждый закрытый ключ имеет соответствующий ему открытый ключ, созданный с помощью программного обеспечения ERA.
-
 **Электронная подпись (ЭП)** — усиленная неквалифицированная электронная подпись как набор цифровых данных, созданный из заданного набора цифровых данных (информации) и некоторого закрытого ключа путём использования заданного (реализованного) порядка (алгоритма) в программном обеспечении ERA, позволяющая однозначно определить были ли изменены эти данные, причём это определение делают путём использования заданного (реализованного) порядка (алгоритма) в программном обеспечении ERA по проверочному ключу, прилагаемому к этим данным, и который соответствует использованному для создания этой Электронной подписи закрытому ключу.
-
 **Цифровая летопись (также далее по тексту “Летопись”, “Цепочка данных”, “Datachain”)** — распределённая база данных по технологии «блокчейн», хранимая на разных цифровых устройствах (узлах) связанных между собой по каналам цифровой связи, созданная с использованием программного обеспечения ERA, записи в которой включаются в наборы (блоки), ссылающиеся друг на друга, создающие таким образом неразрывную цепочку наборов, расположение которых в этой цепочке соответствует росту времени их создания, где каждая запись и каждый набор содержит Электронную подпись, созданную на основе данных в них и проверочный ключ для определения неизменности этих данных по этой Электронной подписи.
-Запись Летописи (Запись) - набор цифровых данных, включающий сами данные, дату создания этого набора, Электронную подпись и проверочный ключ, по которым согласно порядка (алгоритма) программного обеспечения ERA можно определить неизменность данных в записи и соответствие их данной Электронной подписи по прилагаемому проверочному ключу.
-
+**Запись Летописи (Запись)** - набор цифровых данных, включающий сами данные, дату создания этого набора, Электронную подпись и проверочный ключ, по которым согласно порядка (алгоритма) программного обеспечения ERA можно определить неизменность данных в записи и соответствие их данной Электронной подписи по прилагаемому проверочному ключу.
 **Пользователь Летописи (Пользователь)** - лицо, использующее настоящее программное обеспечение ERA для доступа к Летописи для удовлетворения своих нужд.
-
 **Учётная единица (Единица)** — числовая величина, учёт которой ведётся в Летописи.
-
 **Правовая единица** — учётная величина, которая отражает права требования на обладание количеством имущества или совершение количества действий (услуг) с  ним во внешнем по отношению к Летописи мире.
-
 **Счёт Летописи (Счёт)** - это усеченный по порядку (алгоритму), заданному в программном обеспечении ERA, открытый ключ. Как правило на счетах хранятся величины учётных единиц и как правило к счетам привязаны действия в Летописи.
-
 **Электронная подпись Пользователя** - Электронная подпись, которая создана с помощью программного обеспечения ERA из закрытого ключа, которым обладает данный Пользователь.
-
 **Количество подтверждений набора** — число наборов в цепочке, включенных после данного набора плюс 1, если данный набор включен в цепочку Летописи, а если набор еще не включен в цепочку, то число подтверждений для этого набора равно нулю, и он считаются неподтвержденным.
-
 **Количество подтверждений записи (Подтверждения)** — число подтверждений набора, в котором расположена эта запись, а если  запись не расположена в каком-либо наборе Летописи, то число подтверждений для этой записи равно нулю, и она считается неподтвержденной.
-
 **Запись-заявка** — запись, еще не включенная в набор Летописи и являющаяся неподтвержденной.
-
 **Внесение записей-заявок в Летопись** — набор действий, выполненных по прядку (алгоритму) заданному в программном обеспечении ERA, включающий в себя проверку, созданной в том числе другим Пользователем Летописи, записи-заявки  на соответствие правилам ведения записей и порядку работы программного обеспечения ERA, создание набора Летописи, включения проверенной записи-заявки в набор Летописи, подписание созданного набора своей электронной подписью, включение этого набора в свою базу данных, начисление на счет, с помощью которого создана эта электронная подпись, награды за совершенные действия согласно правилам и порядка работы программного обеспечения ERA, рассылка этого набора Летописи по другим узлам.
-
 **Уровень награды за внесение** — величина определяющая множитель для вычисления количества награды за услугу внесения записей-заявок в Летопись согласно правилам и порядка работы программного обеспечения ERA, которую Пользователь задаёт в своей записи-заявке.
-Правовая единица (единица прав) COMPU — учётная единица, вида “актив” с номером 2, дающая право Пользователю, обладающему достаточным количеством этих единиц, порог достаточности которого (относится к слову «количеством») вычисляется в программном обеспечении ERA, использовать программное обеспечение ERA для внесения своих записей-заявок в Летопись как самостоятельно так и путём получения такой услуги от других Пользователей Летописи, причем величина достаточности зависит от вида вносимой записи, ее размера в байтах и Уровня награды за внесение. Роль правовой единицы COMPU в Летописи — мера оплаты за оказание услуги внесения записи в Летопись, наподобие билета за проезд.
-
-**Правовая единица (единица прав) ERA** — учётная единица, вида “актив” с номером 1, дающая право Пользователю, обладающему достаточным количеством этих единиц, порог достаточности которого (относится к слову «количеством») задан в программном обеспечении ERA, использовать программное обеспечение ERA для внесения записей-заявок в Летопись, в том числе оказывать эту услугу для других Пользователей Летописи получая за это от них правовые единицы COMPU и производя новые правовые единицы COMPU согласно правил и порядка работы программного обеспечения ERA, а также дающая право голосовать по вопросам изменения правил, протокола и порядка работы Летописи и/или программного обеспечения ERA, причём количество обладаемых Пользователем правовых единиц ERA задает количество его голосов. Роль правовой единицы ERA в Летописи —  доля  собственности Летописью, наподобие акции предприятия.
-Владение, во владении — это то что Пользователь имеет как собственность.
-
+**Правовая единица (единица прав) COMPU** — учётная единица, вида “актив” с номером 2, дающая право Пользователю, обладающему достаточным количеством этих единиц, порог достаточности которого (относится к слову «количеством») вычисляется в программном обеспечении ERA, использовать программное обеспечение ERA для **внесения своих записей-заявок в Летопись** как самостоятельно так и путём получения такой услуги от других Пользователей Летописи, причем величина достаточности зависит от вида вносимой записи, ее размера в байтах и Уровня награды за внесение. Роль правовой единицы COMPU в Летописи — мера оплаты за оказание услуги внесения записи в Летопись, наподобие билета за проезд.
+**Правовая единица (единица прав) ERA** — учётная единица, вида “актив” с номером 1, дающая право Пользователю, обладающему достаточным количеством этих единиц, порог достаточности которого (относится к слову «количеством») задан в программном обеспечении ERA, использовать программное обеспечение ERA для **внесения записей-заявок в Летопись**, в том числе оказывать эту услугу для других Пользователей Летописи получая за это от них правовые единицы COMPU и производя новые правовые единицы COMPU согласно правил и порядка работы программного обеспечения ERA, а также дающая право голосовать по вопросам изменения правил, протокола и порядка работы Летописи и/или программного обеспечения ERA, причём количество обладаемых Пользователем правовых единиц ERA задает количество его голосов. Роль правовой единицы ERA в Летописи —  доля  собственности Летописью, наподобие акции предприятия.
+**Владение, во владении** — это то что Пользователь имеет как собственность.
 **Управление, в управлении** - то чем пользователь управляет и ему это не принадлежит как его собственность.
-
 **Обладание, в обладании** - это совокупность имущества, находящегося в собственности и в управлении, причем если Пользователь получил в управление Собственность, то она учитывается как положительная величина, а если передал в управление другому пользователю, то как отрицательная величина. Например если пользователь «А» имеет в собственности 10000 единиц и выдал в управление Пользователю «Б» 3000 единиц, то в обладании у него останется 10000 - 3000 = 7000 единиц.
-
 **Удостоверение Пользователя** - создание соответствия между Пользователем Летописи и его открытым ключом, позволяющее определить (идентифицировать) его причастность к созданию Электронной подписи, путём создания и внесения в Летопись при помощи программного обеспечения ERA особой Удостоверяющей записи, -  Записи с кодом 36, в которой указывается срок действия удостоверения для данного проверочного ключа.
-
 **Удостоверенный (личный) проверочный ключ** - открытый ключ, который был удостоверен.
-
 **Удостоверенный (личный) счёт** — счёт, созданный из удостоверенного проверочного ключа.
-
 **Удостоверенная (личная) электронная подпись** — электронная подпись, созданная закрытым ключом, у которого проверочный ключ является  удостоверенным.
-
 **Просроченный проверочный ключ** — удостоверенный открытый ключ, срок действия удостоверения на который вышел.
-
 **Просроченный счёт** — счёт, созданный от просроченного проверочного ключа.
-
 **Просроченная электронная подпись** — электронная подпись, созданная закрытым ключом, у которого проверочный ключ является просроченным.
-
 **Действующий проверочный ключ** — удостоверенный открытый ключ,  срок действия удостоверения на который не вышел.
-
 **Действующий счёт** — счёт, созданный от действующего проверочного ключа.
-
 **Действующая электронная подпись** — электронная подпись, созданная закрытым ключом, у которого проверочный ключ является действующим.
-
 **Заверитель** - Пользователь Летописи, обладающий достаточным количеством правовых единиц, порог достаточности которого (относится к слову «количеством») задан в программном обеспечении ERA, и которое позволяет ему, либо по другим правилам и порядку заданным в программном обеспечении ERA, производить удостоверение другого Пользователя. Только Заверители имеют право удостоверять Пользователей.
-
 **Форжер** - Пользователь Летописи, обладающий достаточным количеством правовых единиц, порог достаточности которого (относится к слову «количеством») задан в программном обеспечении ERA, и которое позволяет ему, либо по другим правилам и порядку заданным в программном обеспечении ERA, собирать наборы записей и вносить их в Летопись. Только Форжеры имеют право вносить Записи в виде заявок в наборы записей, создавать эти наборы, подписывать их своими Электронными подписями и вносить эти наборы в Летопись.
-
 **Удостоверенный пользователь (Участник)** — Пользователь Летописи владение открытым ключом, которого удостоверено Заверителем, при этом такой открытый ключ является удостоверенным ключом, а созданные электронные подписи, которые проверяются таким удостоверенным открытым ключом являются удостоверенными.
-
 **Действительный набор** - набор Летописи, получивший 30 и более подтверждений.
-
 **Действительная запись (Зарубка)** - запись Летописи, расположенная в действительном наборе и имеющая действующую электронную подпись на момент её создания.
-
 **Подтвержденная запись (Запись)** - запись Летописи, получившая 3 и более Подтверждений.
-
 **Заявленная запись (Заявка)** - запись Летописи, не получившая ни одного Подтверждения (неподтверждённая запись) — неподтверждённая Запись.
-
 **Удостоверенный счёт** - счет, созданный удостоверенным открытым ключом.
-
 **Устройство** ― это аппаратная система (физическая или виртуальная) со встроенным запоминающим устройством, в которой может быть запущено программное обеспечение ERA. Каждый аппаратный раздел или стоечный модуль считается устройством.
 
 ## 2. Ограничения
