--- a/License/1.05.md
+++ b/License/1.05.md
@@ -109,7 +109,7 @@
 27. он признаёт факт исполнения услуги по внесению его записи-заявки в Летопись и факт понесения расходов на эту услугу правовыми единицами COMPU в количестве, вычисленном по порядку заданному в программном обеспечении ERA, после получения этой записью определения (статуса) «действительная».
 28. он, являясь Форжером, получает право на использование программного обеспечения ERA для внесения записей-заявок в Летопись в такое время какое вычисляется порядком (алгоритмом) работы программного обеспечения ERA и право получения за это заработка в виде оплаты с вложенных в набор записей, выраженной в правовых единицах COMPU в количестве, исчисляемом согласно правилам заданным в программном обеспечении ERA и получения за это награды, выраженной в правовых учетных единицах COMPU в количестве, исчисляемом согласно правилам заданным в программном обеспечении ERA, причём количество правовых единиц ERA, которые находятся в обладании на его счете, задает частоту появления такого права для данного счёта, а факт исполнения данной услуги и получения заработка и награды за свою работу по внесению данного набора в Летопись подтверждается при получении этим набором, статуса «действительный».
 29. он, обладая некоторым количеством правовых единиц ERA на своём счету, получает право на голосование по вопросам изменения правил, протокола и порядка работы Летописи и/или программного обеспечения ERA, причём количество обладаемых им правовых единиц ERA задает количество его голосов. Голосования при этом могут производиться только при помощи программного обеспечения ERA.
-30. он признает любую запись, действие которой изменяет количество правовых единиц на счету, как переуступку прав требования, свершение которой произведено согласно порядку работы программного обеспечения ERA так что передающая и принимающая стороны определены этим порядком.
+30. он признает любую запись, действие которой изменяет количество правовых единиц на счету, как переуступку прав требования, свершение которой произведено согласно порядку работы программного обеспечения ERA так что передающая и принимающая стороны определены этим порядком, если иное не определено в сообщении к этой записи или порядком (алгоритмом) исполнения этой записи.
 31. он соглашается что последовательность знаков (символов) в виде знака «@» далее имени ERA в любом регистре (заглавные или строчные буквы) далее знака разделителя «:» далее целочисленного числа далее тире далее целочисленного числа указывает на действительную запись (Зарубку) в Летописи, где первое число указывает на номер (отсчет которого начинается с 1) набора записей, в которой эта запись находится, а второе число указывает на номер (отсчет которого начинается с 1) этой записи в этом наборе.
 
 
