--- a/License/1.05.md
+++ b/License/1.05.md
@@ -61,7 +61,7 @@
 1. предоставлять программное обеспечение ERA за оплату в прокат, в аренду или во временное пользование;
 2. продавать, уступать права за оплату, или любым иным способом передавать за плату программное обеспечение ERA;
 3. пытаться обойти технические ограничения в программном обеспечении ERA;
-4. в случае если в программном обеспечении ERA предоставлено Пользователю без исходных кодов, - изучать технологию, декомпилировать, деассемблировать программное обеспечение ERA или предпринимать попытки совершения таких действий, за исключением случаев, когда вышеупомянутые действия разрешены применимым правом;
+4. в случае если программное обеспечение ERA предоставлено Пользователю без исходных кодов, - изучать технологию, декомпилировать, деассемблировать программное обеспечение ERA или предпринимать попытки совершения таких действий, за исключением случаев, когда вышеупомянутые действия разрешены применимым правом;
 5. вносить изменения в программное обеспечение ERA, нарушающие авторские права или данное Соглашение, или порядок (алгоритм и протокол) работы программного обеспечения ERA без разрешения со стороны Правообладателя;
 6. при использовании интернет-возможностей программного обеспечения ERA Вы не имеете права использовать их каким-либо образом, который может помешать их использованию другими лицами или исказить передаваемую Вами информацию третьим лицам.
 
