--- a/License/1.05.md
+++ b/License/1.05.md
@@ -46,8 +46,8 @@
 **Действующий проверочный ключ** — удостоверенный открытый ключ,  срок действия удостоверения на который не вышел.  
 **Действующий счёт** — счёт, созданный от действующего проверочного ключа.  
 **Действующая электронная подпись** — электронная подпись, созданная закрытым ключом, у которого проверочный ключ является действующим.  
-**Заверитель** - Пользователь Летописи, обладающий достаточным количеством правовых единиц, порог достаточности которого (относится к слову «количеством») задан в программном обеспечении ERA, и которое позволяет ему, либо по другим правилам и порядку заданным в программном обеспечении ERA, производить удостоверение другого Пользователя. Только Заверители имеют право удостоверять Пользователей.  
-**Форжер** - Пользователь Летописи, обладающий достаточным количеством правовых единиц, порог достаточности которого (относится к слову «количеством») задан в программном обеспечении ERA, и которое позволяет ему, либо по другим правилам и порядку заданным в программном обеспечении ERA, собирать наборы записей и вносить их в Летопись. Только Форжеры имеют право вносить Записи в виде заявок в наборы записей, создавать эти наборы, подписывать их своими Электронными подписями и вносить эти наборы в Летопись.  
+**Заверитель** - Пользователь Летописи, обладающий достаточным количеством правовых единиц, порог достаточности которого (относится к слову «количеством») задан в программном обеспечении ERA, и которое позволяет ему производить удостоверение другого Пользователя. Порядок предоставления такого права может быть иным согласно порядку работы программного обеспечения ERA. Только Заверители имеют право удостоверять Пользователей.  
+**Форжер** - Пользователь Летописи, обладающий достаточным количеством правовых единиц, порог достаточности которого (относится к слову «количеством») задан в программном обеспечении ERA, и которое позволяет ему собирать наборы записей и вносить их в Летопись. Порядок предоставления такого права может быть иным согласно порядку работы программного обеспечения ERA. Только Форжеры имеют право вносить Записи в виде заявок в наборы записей, создавать эти наборы, подписывать их своими Электронными подписями и вносить эти наборы в Летопись.  
 **Удостоверенный пользователь (Участник)** — Пользователь Летописи владение открытым ключом, которого удостоверено Заверителем, при этом такой открытый ключ является удостоверенным ключом, а созданные электронные подписи, которые проверяются таким удостоверенным открытым ключом являются удостоверенными.  
 **Действительный набор** - набор Летописи, получивший 30 и более подтверждений.  
 **Действительная запись (Зарубка)** - запись Летописи, расположенная в действительном наборе и имеющая действующую электронную подпись на момент её создания.  
