--- a/License/1.05.md
+++ b/License/1.05.md
@@ -29,6 +29,7 @@
 **Количество подтверждений набора** — число наборов в цепочке, включенных после данного набора плюс 1, если данный набор включен в цепочку Летописи, а если набор еще не включен в цепочку, то число подтверждений для этого набора равно нулю, и он считаются неподтвержденным.  
 **Количество подтверждений записи (Подтверждения)** — число подтверждений набора, в котором расположена эта запись, а если  запись не расположена в каком-либо наборе Летописи, то число подтверждений для этой записи равно нулю, и она считается неподтвержденной.  
 **Запись-заявка** — запись, еще не включенная в набор Летописи и являющаяся неподтвержденной.  
+**Код вида записи** - число, указывающее на вид записей, который объединяет эти записи по единообразному порядку (алгоритму) исполнения действий в протоколе программного обеспечения ERA.  
 **Внесение записей-заявок в Летопись** — набор действий, выполненных по прядку (алгоритму) заданному в программном обеспечении ERA, включающий в себя проверку, созданной в том числе другим Пользователем Летописи, записи-заявки  на соответствие правилам ведения записей и порядку работы программного обеспечения ERA, создание набора Летописи, включения проверенной записи-заявки в набор Летописи, подписание созданного набора своей электронной подписью, включение этого набора в свою базу данных, начисление на счет, с помощью которого создана эта электронная подпись, награды за совершенные действия согласно правилам и порядка работы программного обеспечения ERA, рассылка этого набора Летописи по другим узлам.  
 **Уровень награды за внесение** — величина определяющая множитель для вычисления количества награды за услугу внесения записей-заявок в Летопись согласно правилам и порядка работы программного обеспечения ERA, которую Пользователь задаёт в своей записи-заявке.  
 **Правовая единица (единица прав) COMPU** — учётная единица, вида “актив” с номером 2, дающая право Пользователю, обладающему достаточным количеством этих единиц, порог достаточности которого (относится к слову «количеством») вычисляется в программном обеспечении ERA, использовать программное обеспечение ERA для **внесения своих записей-заявок в Летопись** как самостоятельно так и путём получения такой услуги от других Пользователей Летописи, причем величина достаточности зависит от вида вносимой записи, ее размера в байтах и Уровня награды за внесение. Роль правовой единицы COMPU в Летописи — мера оплаты за оказание услуги внесения записи в Летопись, наподобие билета за проезд.  
@@ -36,7 +37,7 @@
 **Владение, во владении** — это то что Пользователь имеет как собственность.  
 **Управление, в управлении** - то чем пользователь управляет и ему это не принадлежит как его собственность.  
 **Обладание, в обладании** - это совокупность имущества, находящегося в собственности и в управлении, причем если Пользователь получил в управление Собственность, то она учитывается как положительная величина, а если передал в управление другому пользователю, то как отрицательная величина. Например если пользователь «А» имеет в собственности 10000 единиц и выдал в управление Пользователю «Б» 3000 единиц, то в обладании у него останется 10000 - 3000 = 7000 единиц.  
-**Удостоверение Пользователя** - создание соответствия между Пользователем Летописи и его открытым ключом, позволяющее определить (идентифицировать) его причастность к созданию Электронной подписи, путём создания и внесения в Летопись при помощи программного обеспечения ERA особой Удостоверяющей записи, -  Записи с кодом 36, в которой указывается срок действия удостоверения для данного проверочного ключа.  
+**Удостоверение Пользователя** - создание соответствия между Пользователем Летописи и его открытым ключом, позволяющее определить (идентифицировать) его причастность к созданию Электронной подписи, путём создания и внесения в Летопись при помощи программного обеспечения ERA особой Удостоверяющей записи, -  Записи с кодом вида записи 36, в которой указывается срок действия удостоверения для данного проверочного ключа.  
 **Удостоверенный (личный) проверочный ключ** - открытый ключ, который был удостоверен.  
 **Удостоверенный (личный) счёт** — счёт, созданный из удостоверенного проверочного ключа.  
 **Удостоверенная (личная) электронная подпись** — электронная подпись, созданная закрытым ключом, у которого проверочный ключ является  удостоверенным.  
@@ -96,7 +97,7 @@
 14. внесенные им в Летопись данные (информация) являются общедоступными и не подлежит защите от просмотра и копирования, причём статус общедоступности её не может быть изменен, а сами данные не могут быть удалены из Летописи. А в случае если он или третья  сторона по какой-либо причине потребует удалить его данные из общего доступа, то требующее лицо должно оплатить компенсацию 100-та богатейшим правовыми учетными единицами ERA Пользователям штраф в размере один миллион долларов.
 15. новые правила и порядок работы Летописи размещаются путем обновления настоящего Соглашения и в случае продолжения использования программного обеспечения ERA считаются принятыми им и обязательными для исполнения им.
 16. он признаёт полностью равнозначным заказному почтовому отправлению на бумажном носителе Зарубку, созданную и подписанную Участником-отправителем, в которой счётом получателя значится счёт, принадлежащий ему, причем он признаёт её получение под расписку и признаёт что открыл и прочел это отправление по прошествии 3-х суток как Запись стала Зарубкой (действительной).
-17. он создав запись “заверения”, код которой 40 (далее заверяющая запись), и указав в ней ссылку на другую Запись Летописи (далее заверяемая запись),  признает её подписание своей Электронной подписью, в том числе как её заверение, удостоверение или подтверждение данных и/или действий, запечатленных в заверяемой записи, причём он подтверждает что создатель заверяемой записи создал её не под принуждением, в здравом уме и и светлой памяти, а данные и/или действия в этой записи имеют место быть в действительности.
+17. он создав запись “заверения”, код вида записи которой 40 (далее заверяющая запись), и указав в ней ссылку на другую Запись Летописи (далее заверяемая запись),  признает её подписание своей Электронной подписью, в том числе как её заверение, удостоверение или подтверждение данных и/или действий, запечатленных в заверяемой записи, причём он подтверждает что создатель заверяемой записи создал её не под принуждением, в здравом уме и и светлой памяти, а данные и/или действия в этой записи имеют место быть в действительности.
 18. он, как Заверитель удостоверивший другого Пользователя, несет ответственность за достоверность удостоверенных им данных в полном объеме.
 19. он не несёт ответственности по делам других Пользователей.
 20. он состоя в 100 наиболее богатых в обладании правовыми единицами ERA не может увеличивать величину своего обладания ими. А если такое всё же случается, то обязуется в течении суток передать в управление часть этих единиц другому Пользователю так, чтобы величина своего обладания снизилась по крайней мере до предыдущего значения, а величина обладания у получившего их Пользователя не стала больше половины чем у передавшего.
@@ -118,7 +119,7 @@
 
 1. Связаться с Правообладателем программного обеспечения ERA (основной Заверитель) или с иным Заверителем.
 2. Подтвердить свое обладание проверочным ключом, обладание которым он хочет удостоверить, путём перевода безналичных денег со своего личного банковского счёта на банковский счёт Заверителя с указанием в назначении платежа строчки “Согласен с Лицензией ERA, мой открытый ключ ОТКРЫТЫЙ_КЛЮЧ”, - где вместо ОТКРЫТЫЙ_КЛЮЧ подставить свой открытый ключ в кодировке Base58, который можно взять в программном обеспечении в закладке «Счета» при нажатии правой кнопки мыши на своём счете. Оплаченная сумма Основному Заверителю принимается как оплата за услугу удостоверения Пользователя в его пользу.
-3. Создать Запись Летописи со своими личными (персональными) данными - код записи в протоколе программного обеспечения ERA 24, подписать её Электронной подписью, соответствующей открытому ключу, который был указан в назначении безналичного платежа и скопировать в буфер обмена компьютера эту созданную Запись с помощью команды программного обеспечения ERA “Скопировать в буфер”. При этом Запись будет закодирована в Base58 и внесена в буфер копирования компьютера.
+3. Создать Запись Летописи со своими личными (персональными) данными - код вида записи 24, подписать её Электронной подписью, соответствующей открытому ключу, который был указан в назначении безналичного платежа и скопировать в буфер обмена компьютера эту созданную Запись с помощью команды программного обеспечения ERA “Скопировать в буфер”. При этом Запись будет закодирована в Base58 и внесена в буфер копирования компьютера.
 4. Передать созданную Запись в виде текста кодировки Base58 Участнику Летописи для внесения своих данных в Летопись.
 5. Участника, получивший такую запись обязан проверить ее открытый ключ на сайте Заверителя или Правообладателя программного обеспечения ERA, и удостовериться что по данным с этого сайта такой открытый ключ принадлежит (соответствует) данному Пользователю с указанным ФИО, и при подтверждении такого соответствия вложить эту Запись в свою Запись и внести её в Летопись или подать Заявку на внесение этой Записи в Летопись.
 6. После получения этой Записью статуса Электронной подписи “подтвержденная” и появления данных о своей персоне в Летописи в списке персон с присвоенным ею номером, новый Пользователь обязан лично связаться с Заверителем, предоставить свои личные данные, включая данные паспорта или иного документа удостоверяющего личность полностью, и сверить их с данными персоны в списке Летописи под соответствующим номером.
