--- a/License/1.05.md
+++ b/License/1.05.md
@@ -104,7 +104,7 @@
 21. права на действия в Летописи задаются числом правовых единиц ERA, находящихся в обладании у Пользователя, величины первоначального распределения которых задаются согласно записям в начальном наборе (генесиз-блоке) Летописи, либо другими правилами и порядком, заданными в программном обеспечении ERA.
 22. он, кроме Правообладателя программного обеспечения ERA, обязуется не иметь совокупно более чем 10% правовых единиц ERA в обладании (чтобы соблюсти принцип децентрализации). Иначе они должны быть переданы другим участникам в управление.
 23. он предоставляет в открытый общий доступ данные своего безналичного (банковского или электронного) платежа со своего удостоверенного (авторизованного) лицевого счёта в пользу третьего лица, в назначении которого написано «Я, ФИО, соглашаюсь с Лицензией ERA, мой открытый ключ ОТ58», где ФИО — полные фамилия имя и отчество, а ОТ58 — это значение открытого ключа, используемого в  и выраженного в кодировке Base58, причем получатель такого платежа имеет право создать Запись в Летописи с помощью программного обеспечения, в которой получателем будет задан Счёт, соответствующий данному открытому ключу ОТ58, а в сообщении Записи будут указаны все данные этого безналичного платежа включая данные из его назначения. Причем он (Пользователь) соглашается что такой безналичный платеж равнозначен его письменному соглашению с Правообладателем и другими Пользователями Летописи об ведении электронного взаимодействия с ними в Летописи с помощью программного обеспечения, при котором проверка его (Пользователя) электронной подписи (см. ФЗ 63 ст.6 п.2) производится по его открытому ключу ОТ58, который он указал в назначении платежа, и порядку (алгоритму) заданному (реализованному) в программном обеспечении ERA.
-24. он, получив безналичный платеж за услугу удостоверения от Пользователя с назначением платежа «Я, ФИО, соглашаюсь с Лицензией ERA, мой открытый ключ ОТ58», где ФИО — полные фамилия имя и отчество, а ОТ58 — это значение открытого ключа, используемого в программном обеспечении и выраженного в кодировке Base58, обязан послать письмо на этот открытый ключ с заголовком «удостоверен банковским платежом», а в теле письма указать ФИО плательщика и другие данные платежа без персональных данных Пользователя в открытом виде (без шифрования) в случае если внесение персональных данных этого Пользователя будет производиться другим лицом.
+24. он, получив безналичный платеж от Пользователя с его личного счета за услугу его удостоверения с назначением платежа «Я, ФИО, соглашаюсь с Лицензией ERA, мой открытый ключ ОТ58», где ФИО — полные фамилия имя и отчество, а ОТ58 — это значение открытого ключа, используемого в программном обеспечении и выраженного в кодировке Base58, обязан послать письмо на этот открытый ключ с заголовком «удостоверен банковским платежом», а в теле письма указать ФИО плательщика и другие данные платежа без персональных данных Пользователя в открытом виде (без шифрования) в случае если внесение персональных данных этого Пользователя будет производиться другим лицом.
 25. созданная им Запись (запись-заявка) является лишь заявлением на внесение её в Летопись и не может быть внесена в Летопись в обязательном порядке. Такую заявку могут удовлетворить только Форжеры по своему усмотрению, при условии что у него достаточно правовых единиц COMPU для расхода на услугу внесения записи-заявки в Летопись согласно правил и порядка работы программного обеспечения ERA и эта запись не нарушает правил и порядка работы Летописи и правил и порядка работы программного обеспечения ERA.
 26. он расходует правовые единицы COMPU на получение услуги внесения записей-заявок в Летопись в количестве, вычисленном согласно правилам и порядка работы программного обеспечения ERA, и которое списывается автоматически со Счёта, созданного из публичного ключа, соответствующего закрытому ключу, с помощью которого создана Электронная подпись для данной Записи.
 27. он признаёт факт исполнения услуги по внесению его записи-заявки в Летопись и факт понесения расходов на эту услугу правовыми единицами COMPU в количестве, вычисленном по порядку заданному в программном обеспечении ERA, после получения этой записью определения (статуса) «действительная».
