--- a/License/1.05.md
+++ b/License/1.05.md
@@ -56,6 +56,11 @@
 **Заявленная запись (Заявка)** - запись Летописи, не получившая ни одного Подтверждения (неподтверждённая запись) — неподтверждённая Запись.  
 **Удостоверенный счёт** - счет, созданный удостоверенным открытым ключом.  
 **Устройство** ― это аппаратная система (физическая или виртуальная) со встроенным запоминающим устройством, в которой может быть запущено программное обеспечение ERA. Каждый аппаратный раздел или стоечный модуль считается устройством.  
+**Сущность Единица (Актив)** ― это вид некоторой мерной сущности, которую можно передать, обменять и/или продать, учет которых осуществляется с помощью учетных единиц Летописи и описание которых представлено (ведётся) в отдельном списке Летописи (I, A).  
+**Сущность Личность (Персона)** ― это вид сущности, которая описывает личность (персону) живого существа (человека) и описание которых представлено (ведётся) в отдельном списке Летописи (P).  
+**Сущность Назначение (Статус)** ― это вид сущности, которая описывает назначение (статус), должность (титул), свойство, награду, разрешение (лицензию), которое как правило не обменивается и не передается, а появляется (учитывается, заносится) на время и описание которых представлено (ведётся) в отдельном списке Летописи (S).  
+**Сущность Объединение (Союз)** ― это вид сущности, которая описывает объединение (союз) Личностей (Персон), которое как правило управляется конечным числом участников, а появляется (учитывается, заносится) на время и описание которых представлено (ведётся) в отдельном списке Летописи (U).  
+
 
 ## 2. Ограничения
 Правообладатель сохраняет все права, включая права, предусмотренные законами о защите интеллектуальной собственности, которые не предоставляются явным образом в рамках настоящего соглашения. Данная лицензия не предоставляет Вам права:  
@@ -111,7 +116,8 @@
 28. он, являясь Форжером, получает право на использование программного обеспечения ERA для внесения записей-заявок в Летопись в такое время какое вычисляется порядком (алгоритмом) работы программного обеспечения ERA и право получения за это заработка в виде оплаты с вложенных в набор записей, выраженной в правовых единицах COMPU в количестве, исчисляемом согласно правилам заданным в программном обеспечении ERA и получения за это награды, выраженной в правовых учетных единицах COMPU в количестве, исчисляемом согласно правилам заданным в программном обеспечении ERA, причём количество правовых единиц ERA, которые находятся в обладании на его счете, задает частоту появления такого права для данного счёта, а факт исполнения данной услуги и получения заработка и награды за свою работу по внесению данного набора в Летопись подтверждается при получении этим набором, статуса «действительный».
 29. он, обладая некоторым количеством правовых единиц ERA на своём счету, получает право на голосование по вопросам изменения правил, протокола и порядка работы Летописи и/или программного обеспечения ERA, причём количество обладаемых им правовых единиц ERA задает количество его голосов. Голосования при этом могут производиться только при помощи программного обеспечения ERA.
 30. он признает любую запись, действие которой изменяет количество правовых единиц на счету, как переуступку прав требования, свершение которой произведено согласно порядку работы программного обеспечения ERA так что передающая и принимающая стороны определены этим порядком, если иное не определено в сообщении к этой записи или порядком (алгоритмом) исполнения этой записи.
-31. он соглашается что последовательность знаков (символов) в виде знака «@» далее имени ERA в любом регистре (заглавные или строчные буквы) далее знака разделителя «:» далее целочисленного числа далее тире далее целочисленного числа указывает на действительную запись (Зарубку) в Летописи, где первое число указывает на номер (отсчет которого начинается с 1) набора записей, в которой эта запись находится, а второе число указывает на номер (отсчет которого начинается с 1) этой записи в этом наборе.
+31. он соглашается что последовательность знаков (символов) в виде знака «@» далее имени ERA в любом регистре (заглавные или строчные буквы) далее знака разделителя «:» далее целочисленного числа далее тире далее целочисленного числа указывает на действительную запись (Зарубку) в Летописи, где первое число указывает на номер (отсчет которого начинается с 1) набора записей, в которой эта запись находится, а второе число указывает на номер (отсчет которого начинается с 1) этой записи в этом наборе. Причем если данная последовательность содержится в записи Летописи, то имя ERA может быть опущено. Пример, @era.1543-12 или @.1543-12 - указывают на Зарубку в блоке 1543 с номером 12 в этом наборе.
+32. он соглашается что последовательность знаков (символов) в виде знака «@» далее имени ERA в любом регистре (заглавные или строчные буквы) далее знака разделителя «:» далее символа далее целочисленного числа указывает на сущность в Летописи, где символ указывает на вид сущности, а число указывает на номер (отсчет которого начинается с 1) записи в наборе Летописи этого вида сущностей, в которой представлено описание данной сущности. Причем если символом является буква "S", то это указывает на вид сущностей Назначение (Статус),  если - "P", то Личность (Персона), если I или A, то Единица (Актив), если - U, то Объединение (Союз). Вдобавок, если данная последовательность содержится в записи Летописи, то имя ERA может быть опущено. Пример, @era.P13 или @.P13 - указывают на сущность Личность, описанную в записи за номером 13, которая располагается наборе Личностей Летописи.
 
 
 ## 5. Порядок создания новых Пользователей и их удостоверение
